--- a/app/service/package.json
+++ b/app/service/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/Aubert-co/Auth-service.git",
   "author": "aubert-co <blacket021@gmail.com>",
   "license": "MIT",
- "scripts": {
+  "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register src/serve.ts --noEmit",
     "start": "node dist/serve.js",
     "build": "tsc --project ./tsconfig.json",
@@ -14,17 +14,24 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@types/cors": "^2.8.19",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.5",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "@types/supertest": "^6.0.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "jest": "^30.2.0",
